--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.asual.lesscss</groupId>
-	<artifactId>lesscss-engine</artifactId>
+	<artifactId>lesscss-engine-multi</artifactId>
 	<version>1.5.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<name>LESS Engine</name>
@@ -19,9 +19,9 @@
 	</licenses>
 
 	<scm>
-		<url>http://github.com/asual/lesscss-engine</url>
-		<connection>scm:git:git://github.com:asual/lesscss-engine.git</connection>
-		<developerConnection>scm:git:git@github.com:asual/lesscss-engine.git</developerConnection>
+		<url>http://github.com/jpwesselink/lesscss-engine</url>
+		<connection>scm:git:git://github.com:jpwesselink/lesscss-engine.git</connection>
+		<developerConnection>scm:git:git@github.com:jpwesselink/lesscss-engine.git</developerConnection>
 		<tag>HEAD</tag>
 	</scm>
 
